# clipboardHijacking

./: Cargo.toml  README.md
src/: get_information.rs  lib_.rs  main.rs
